src/lang/rust/snapshots/nix_init__lang__rust__tests__libz_ng.snap
---
source: src/lang/rust/tests.rs
expression: run(stringify!(libz_ng))
---
AllInputs {
    native_build_inputs: Inputs {
        always: {
            "pkg-config",
        },
        darwin: {},
        aarch64_darwin: {},
        x86_64_darwin: {},
        linux: {},
        aarch64_linux: {},
        x86_64_linux: {},
    },
    build_inputs: Inputs {
        always: {},
        darwin: {},
        aarch64_darwin: {},
        x86_64_darwin: {},
        linux: {},
        aarch64_linux: {},
        x86_64_linux: {},
    },
    env: {},
}
