src/lang/rust/snapshots/nix_init__lang__rust__tests__llvm.snap
---
source: src/lang/rust/tests.rs
expression: run(stringify!(llvm))
---
AllInputs {
    native_build_inputs: Inputs {
        always: {},
        darwin: {},
        aarch64_darwin: {},
        x86_64_darwin: {},
        linux: {},
        aarch64_linux: {},
        x86_64_linux: {},
    },
    build_inputs: Inputs {
        always: {
            "libxml2",
            "ncurses",
            "zlib",
        },
        darwin: {},
        aarch64_darwin: {},
        x86_64_darwin: {},
        linux: {},
        aarch64_linux: {},
        x86_64_linux: {},
    },
    env: {
        "LLVM_SYS_150_PREFIX": (
            "llvmPackages_15.llvm.dev",
            [
                "llvmPackages_15",
            ],
        ),
    },
}
