src/lang/rust/snapshots/nix_init__lang__rust__tests__zstd_old.snap
---
source: src/lang/rust/tests.rs
expression: run(stringify!(zstd_old))
---
AllInputs {
    native_build_inputs: Inputs {
        always: {},
        darwin: {},
        aarch64_darwin: {},
        x86_64_darwin: {},
        linux: {},
        aarch64_linux: {},
        x86_64_linux: {},
    },
    build_inputs: Inputs {
        always: {},
        darwin: {},
        aarch64_darwin: {},
        x86_64_darwin: {},
        linux: {},
        aarch64_linux: {},
        x86_64_linux: {},
    },
    env: {},
}
